# learning-lm-rs

./: .env  Cargo.toml
src/: errors.rs  main.rs  model.rs  operators.rs  params.rs  tensor.rs
templates/: chat.html
