[package]
name = "learning-lm-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2.10.0"
actix-files = "0.6.0-beta.16"
tera = "1.20.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4.3"
tokenizers = "0.19.1"
rand = "0.8"
redis = "0.29.1"
sqlx = {version = "0.8.3", default_features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
]}